Fix visual bug: pagination not visible

--- a/src/Discovery/Discovery.css
+++ b/src/Discovery/Discovery.css
@@ -204,12 +204,12 @@
 .discovery-table-container .ant-table-tbody > tr.ant-table-row::after {
   display: block;
   position: absolute;
-  bottom: -100px;
+  bottom: -40px;
   left: 0;
   z-index: 0;
   content: "";
   width: 100%;
-  height: 100px;
+  height: 40px;
   background-color: #dfe3e2;
   transition: background-color 0.3s, border-color 0.3s;
 }
